--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mark3apps/w3ts",
   "version": "2.3.1",
   "description": "TypeScript API for Warcraft III custom maps.",
-  "author": "TriggerHappy",
+  "author": "TriggerHappy/KickKing",
   "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
@@ -13,9 +13,6 @@
     "tslint": "^6.1.0",
     "typescript": "^4.0.5",
     "war3-types": "^1.0.4"
-  },
-  "publishConfig": {
-    "@MARK3APPS:registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
